--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
         </div>
     </div>
 
+    <div class="header-title">About Me</div>
+
+    <p class="paragraph">I'm a <b>16-year-old</b> Roblox architect specializing in <b>custom builds in Roblox Studio</b>
+        since <strong>2018</strong>, with a professional focus since <strong>2021</strong>. I’ve completed around <b>120
+            commissions for various studios and brands</b>, including collaborations with <b>Exclusible S.A (Louboutin)
+            and Yama Studio (Camden Grave)</b>. I'm experienced in <b>creating unique environments for Roblox-based
+            advertising</b> and am <b>open to new projects</b>.
+        <i>If you're interested in collaborating, reach out to create something exceptional together!</i>
+    </p>
+
+    <div class="header-title">Recent Work</div>
+    <div class="header-subtitle"><i>A selection of my latest projects</i></div>
+
+    <div class="cards-container">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
+
     <footer aria-hidden="true">
         <p><i>© 2025 Majoodie Portfolio</i></p>
     </footer>
