--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta property="og:title" content="majoodie's portfolio">
     <meta property="og:description" content="Professional Roblox Builder since 2018">
-    <meta property="og:image" content="https://g0ofycat.github.io/majoodie_portfolio/images/favicon.jpg">
+    <meta property="og:image" content="https://g0ofycat.github.io/majoodie_portfolio/images/favicon.png">
 </head>
 
 <body>
