--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>majoods portfolio</title>
+    <title>majoodie's portfolio</title>
 
     <link rel="icon" type="image/jpeg" href="./images/favicon.png">
 
@@ -118,42 +118,42 @@
             <div class="carousel-track" id="carouselTrack">
                 <div class="gallery-card">
                     <div class="gallery-image">
-                        <img src="images/work/image_1.png">
+                        <img src="images/work/image_1.png" alt="1st Image">
                     </div>
                     <h3 class="gallery-title">1</h3>
                     <p class="gallery-subtitle">Description</p>
                 </div>
                 <div class="gallery-card active">
                     <div class="gallery-image">
-                        <img src="images/work/image_2.png">
+                        <img src="images/work/image_2.png" alt="2nd Image">
                     </div>
                     <h3 class="gallery-title">2</h3>
                     <p class="gallery-subtitle">Description</p>
                 </div>
                 <div class="gallery-card">
                     <div class="gallery-image">
-                        <img src="images/work/image_3.png">
+                        <img src="images/work/image_3.png" alt="3rd Image">
                     </div>
                     <h3 class="gallery-title">3</h3>
                     <p class="gallery-subtitle">Description</p>
                 </div>
                 <div class="gallery-card">
                     <div class="gallery-image">
-                        <img src="images/work/image_4.png">
+                        <img src="images/work/image_4.png" alt="4th Image">
                     </div>
                     <h3 class="gallery-title">4</h3>
                     <p class="gallery-subtitle">Description</p>
                 </div>
                 <div class="gallery-card">
                     <div class="gallery-image">
-                        <img src="images/work/image_5.png">
+                        <img src="images/work/image_5.png" alt="5th Image">
                     </div>
                     <h3 class="gallery-title">5</h3>
                     <p class="gallery-subtitle">Description</p>
                 </div>
                 <div class="gallery-card">
                     <div class="gallery-image">
-                        <img src="images/work/image_6.png">
+                        <img src="images/work/image_6.png" alt="6th Image">
                     </div>
                     <h3 class="gallery-title">6</h3>
                     <p class="gallery-subtitle">Description</p>
